--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,5 @@
+
+<div class="container-fluid">
 <h1>start of app</h1>
 <app-cover-image></app-cover-image>
 <app-tabs></app-tabs>
@@ -6,3 +8,4 @@
 <app-footer></app-footer>
 <h1>end of app</h1>
 
+</div>
