added basic animation for cover-image

--- a/src/app/cover-image/cover-image.component.html
+++ b/src/app/cover-image/cover-image.component.html
@@ -1,3 +1,9 @@
-<p>
-  cover-image works!
-</p>
+
+<div class="container-fluid">
+<!-- [@CoverImageState] ="stateName"-->
+  <img [@CoverImageState] ="stateName" src="http://artofidan.com/assets/CoverImages/CoverartBoardN.jpg" >
+  <img [@CoverImageState] ="stateName" src="http://artofidan.com/assets/CoverImages/CoverSketchesN.jpg" >
+  
+</div>
+
+<button (click)="toggle()">Toggle PopOver</button>
