fixed first img size in cover-image

--- a/src/app/cover-image/cover-image.component.html
+++ b/src/app/cover-image/cover-image.component.html
@@ -2,7 +2,7 @@
 <div class="container-fluid">
 <!-- [@CoverImageState] ="stateName"-->
   <img [@CoverImageState] ="stateName" src="http://artofidan.com/assets/CoverImages/CoverartBoardN.jpg" >
-  <img [@CoverImageState] ="stateName" src="http://artofidan.com/assets/CoverImages/CoverSketchesN.jpg" >
+  <img src="http://artofidan.com/assets/CoverImages/CoverSketchesN.jpg" class="sec" >
   
 </div>
 
