--- a/src/app/cover-image/cover-image.component.css
+++ b/src/app/cover-image/cover-image.component.css
@@ -1,4 +1,13 @@
 img{
-    display: block;
     width: 100%;
+    position: relative;
+    
+}
+
+.sec{
+    
+    position: absolute;
+    top: 0%;
+    left: 0%;
+    opacity: 0.2;
 }
