added 3th tab and routing

--- a/src/app/cover-image/cover-image.component.html
+++ b/src/app/cover-image/cover-image.component.html
@@ -3,6 +3,7 @@
 <!-- [@CoverImageState] ="stateName"-->
   <img [@CoverImageState] ="stateName" src="http://artofidan.com/assets/CoverImages/CoverartBoardN.jpg" >
   <img src="http://artofidan.com/assets/CoverImages/CoverSketchesN.jpg" class="sec" >
+  <img src="http://artofidan.com/assets/CoverImages/coverinkN.jpg" class="sec" >
   
 </div>
 
