--- a/src/app/tabs/tabs.component.html
+++ b/src/app/tabs/tabs.component.html
@@ -13,7 +13,9 @@
     <a mat-tab-link routerLink = "/fine-art" (click)="activeLink = 'fine-art'" [active]="activeLink == 'fine-art'">
       FINE ART
     </a>
-    
+    <a mat-tab-link routerLink = "/sketches" (click)="activeLink = 'sketches'" [active]="activeLink == 'sketches'">
+      SKETCHES
+    </a>
 
   </nav >
 
